[package]
name = "zenth_crypto_service"
version = "0.0.1"
authors = ["Doctor"]
edition = "2024"
description = "A comprehensive cryptographic library providing various encryption, hashing, and security features"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DocteurMoriarty/zenth_crypto_service"
documentation = "https://docs.rs/zenth_crypto_service"
readme = "README.md"
keywords = ["crypto", "encryption", "security", "aes", "rsa", "hash", "hashs"]
categories = ["cryptography", "security"]

[dependencies]
base64 = "0.22.1"
aes = "0.8.3"
cipher = { version = "0.4.4", features = ["alloc"] }
aes-gcm = "0.10.3"
const-str = "0.6.2"
criterion = "0.5"
ctr = "0.9.2"
curve25519-dalek = "4.1.3"
derive-where = "1.2.5"
derive_more = { version = "2.0.0", features = ["display", "from"] }
dir-test = "0.4.1"
displaydoc = "0.2.5"
ed25519-dalek = "2.1.0"
ghash = "0.5.0"
heck = "0.5"
hex = "0.4"
hmac = "0.12.0"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.1.0"
serpent = "0.5.1"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0.12"
md5 = "0.7.0"
sha3 = "0.10.8"
zeroize = "1.5"            
rayon = "1.10.0"
argon2 = "0.5.3"
crc32fast = "1.4.2"
rsa = "0.9.8"
hex-literal = "1.0.0"
rand_core = "0.6"
rand = "0.8"


#sha1s = "0.10.6"
#sha2s = "0.10.9"

boring-signal = { git = "https://github.com/signalapp/boring", tag = "signal-v4.15.0", package = "boring", default-features = false }
curve25519-dalek-signal = { git = 'https://github.com/signalapp/curve25519-dalek', package = "curve25519-dalek", tag = 'signal-curve25519-4.1.3' }
tokio-boring-signal = { git = "https://github.com/signalapp/boring", package = "tokio-boring", tag = "signal-v4.15.0" }
